# LibreCTS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CTImage.cpp  CTImage.h  ErrorHandler.cpp  ErrorHandler.h
src/ui/: ctimageviewer.cpp  ctimageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
